--- a/法廊/lawundry/templates/about.html
+++ b/法廊/lawundry/templates/about.html
@@ -1,10 +1,17 @@
-{% include 'header.html' %}
+<!DOCTYPE html>
 
-<div class="content">
-    <h1>Welcome to the Trademark Comparison System</h1>
-</div>
+<html lang="zh">
+    {% include 'layout.html' %}
+    <body>
+        <div class="container">
+            {% include 'header.html' %}
 
-<div class="divider"></div> 
-{% include 'footer.html' %}
-</body>
+            <div class="content">
+                <h1>Welcome to the Trademark Comparison System</h1>
+            </div>
+
+            <div class="divider"></div> 
+            {% include 'footer.html' %}
+        </div>
+    </body>
 </html>
