--- a/法廊/lawundry/templates/header.html
+++ b/法廊/lawundry/templates/header.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trademark Comparison System</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="header">
-            <div class="title">Trademark Comparison System</div>
-            <div class="nav"> 
-              <a href="/about" class="nav-link">About Us</a>
-              <a href="/index" class="nav-link">Comprision System</a>
-            </div>
-        </div> 
+<div class="header">
+    <button class="title" onclick="location.href='/index';">Trademark Comparison System</button>
+    <div class="nav"> 
+        <a href="/index" class="nav-link">Comparision System</a>
+        <a href="/about" class="nav-link">About Us</a>
+    </div>
+</div>
