--- a/法廊/lawundry/static/css/style.css
+++ b/法廊/lawundry/static/css/style.css
@@ -31,7 +31,7 @@ body {
   gap: 40px;
 }
 
-/* 分页链接样式 */
+/* 分頁銜接样式 */
 .nav a {
   color: #000000;
   font-size: 25px;
@@ -39,16 +39,40 @@ body {
   font-weight: 450;
 }
 
-/* 分页链接的悬停样式 */
 .nav a:hover {
   text-decoration: underline;
 }
 
-/* 文本样式 */
+/*對buttom 預設值做修改*/
+.button {
+  appearance: none;
+  text-rendering: auto;
+  color: buttontext;
+  letter-spacing: normal;
+  word-spacing: normal;
+  line-height: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  display: inline-block;
+  text-align: center;
+  align-items: flex-start;
+  cursor: pointer;
+  box-sizing: border-box;
+  background-color: transparent; /* Remove background color */
+  margin: 0em;
+  padding-block: 1px;
+  padding-inline: 6px;
+  border: none; /* Remove border */
+}
+
+/* title -> trademark comparison */
 .title {
   color: #000000;
   font-size: 30px;
   font-weight: 500;
+  background-color: transparent; /* Remove background color */
+  border: none; /* Remove border */
 }
 
 .section-title {
@@ -95,7 +119,23 @@ body {
   margin-bottom: 20px;
 }
 
+/*buttom*/
 .result-description {
+  color: #000000;
+  font-size: 25px;
+  font-weight: 800;
+  width: 400px;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 20px;
+  background-color: transparent; /* Remove background color */
+  border: none; /* Remove border */
+}
+.result-description:hover{
+  color: blue;
+}
+
+.feature-result-description{
   color: #000000;
   font-size: 25px;
   font-weight: 800;
@@ -146,7 +186,7 @@ body {
   text-align: center;
 }
 
-/* 内容样式 */
+/* 内容 */
 .content {
   width: 100%;
   padding: 20px;
@@ -180,9 +220,17 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 6px;
   margin: 10px;
+  overflow: hidden; /* 確保圖片不會超出框框 */
 }
 
-.upload-button , .feature-upload-button{
+.image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+/*一開始上傳照片的按鈕 ＆ 局部比對上傳按鈕*/
+.upload-button {
   font-size: 18px;
   display: flex;
   justify-content: center;
@@ -192,22 +240,35 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 6px;
   margin: 10px;
-  background-color: #5d00ff; /* 添加背景色 */
+  background-color: #A7BEC6; 
+  color: white; 
+  cursor: pointer; 
+  transition: background-color 0.3s ease; /*過度效果*/
+}
+.submitImage-button , .feature-upload-button{
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 45px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  margin: 10px;
+  background-color: #5B7493; /* 添加背景色 */
   color: white; /* 改变文字颜色 */
   cursor: pointer; /* 当鼠标移至按钮上时，改变鼠标指针 */
   transition: background-color 0.3s ease; /* 添加过渡效果 */
 }
+/*滑鼠移上去時改變背景顏色*/
+.upload-button:hover ,.feature-upload-button:hover, .submitImage-button:hover {
+  background-color: #000000; 
+}
+
 .feature-upload-button-container {
   display: flex; /* 使用 flexbox 进行布局 */
   align-items: center; /* 垂直居中按钮 */
   justify-content: center; /* 水平居中按钮 */
-}
-
-.upload-button:hover {
-  background-color: #000000; /* 当鼠标移至按钮上时，改变背景色 */
-}
-.feature-upload-button:hover {
-  background-color: #000000; /* 当鼠标移至按钮上时，改变背景色 */
 }
 
 .divider {
@@ -248,7 +309,7 @@ body {
 }
 
 .result-item {
-  width: calc(33.33% - 20px); /* 设置每个项目的宽度并减去间隙 */
+  width: 100%; /* 设置每个项目的宽度并减去间隙 */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -257,20 +318,15 @@ body {
   border-radius: 6px; /* 添加边框圆角 */
 }
 
-.result-items-row ,.feature-result-container{
+.result-items-row {
   display: flex;
   justify-content: center; /* 水平居中 */
   gap: 20px; /* 控制容器之间的距离 */
   width: 100%; /* 占满容器宽度 */
   margin: 0 auto; /* 自动设置左右外边距 */
+  margin-bottom: 40px;
 }
-/*
-.feature-result-container {
-  display: flex;
-  justify-content: center;
-  gap: 5px;
-}
-*/
+
 .result-container {
   justify-content: space-between;
   margin-bottom: 20px;
@@ -295,12 +351,13 @@ body {
   align-items: center;
   justify-content: center;
   border: 1px solid #000; /* 可選，設置邊框 */
+  overflow: hidden;
 }
 
 .feature-selection-item img {
   width: 100%; /* 讓圖片寬度填滿框框 */
   height: 100%; /* 讓圖片高度填滿框框 */
-  object-fit: cover; /* 確保圖片不會變形 */
+  object-fit: contain; /* 確保圖片不會變形 */
 }
 
 .feature-selection-item input[type="checkbox"] {
